# parser-rules

./: BUILD  MODULE.bazel  README.md
parser/: BUILD  parser.bzl  parser_support.h  parser_support_test.cc
tests/: BUILD  parser_test.bzl
