module(
    name = "com_github_bcsgh_parser_rules",
    version = "0.0.2",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20240722.0.bcr.2",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

bazel_dep(
    name = "com_github_bcsgh_build_test",
    version = "0.0.1",
)

bazel_dep(
    name = "googletest",
    version = "1.15.2",
)

bazel_dep(
    name = "gnu-bison",
    version = "3.8.2",
)

bazel_dep(
    name = "flex",
    version = "2.6.1",
)

"""
register_toolchains("//parser:linux_flex_bison")
"""
register_toolchains("//parser:build_flex_bison")
#"""
